resources/assets/less/bem/tooltip-beatmap.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.tooltip-beatmap {
  min-width: 110px;
  max-width: none;

  .default-border-radius();

  background-color: @osu-colour-b6;
  border: 0 solid transparent;

  .qtip-content {
    width: 100%;
    height: 100%;
    padding: 2px 10px;
  }

  &__text {
    text-align: center;
    font-size: 11px;
    margin: 4px 0;

    &--easy {
      color: @diff-easy;
    }

    &--normal {
      color: @diff-normal;
    }

    &--hard {
      color: @diff-hard;
    }

    &--insane {
      color: @diff-insane;
    }

    &--expert {
      color: @diff-expert;
    }

    &--expert-plus {
      color: @diff-expert-plus;
    }

    &--title {
      font-weight: 700;
      color: #fff;
    }
  }
}

